--- a/css/default.css
+++ b/css/default.css
@@ -1,35 +1,47 @@
 html, body {
-    font-size: 16px;
-    font-family: monospace;
-    background: #121212;
-    color: #00FF66;
+    font-size: 20px;
+    font-family: 'Inconsolata', monospace;
+    background: #FFFFE7;
+    color: #000000;
     line-height: 1.25;
+    margin: auto;
 }
 
-a {
-    color: #ACFFBD;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-header {
+header, footer {
+    font-size: 22px;
+    background: #D7F0F0;
     text-align: center;
 }
 
 footer {
-    text-align: center;
+    box-shadow: 0 50vh 0 50vh #D7F0F0;
 }
 
-#code {
-    background: #1c1c1c;
-    color: #FF8C00;
+img {
+    max-width: 100%;
 }
 
-#block {
+a {
+    color: #000000;
+    text-decoration: underline;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+hr {
+    border: 1px solid #B9C8E5;
+}
+
+.main {
     margin: auto;
+    padding: 20px;
     max-width: 640px;
+}
+
+.code {
+    overflow: auto;
+    background: #EFEFEF;
+    color: #000000;
 }
